--- a/themes/shapka/layouts/partials/header.html
+++ b/themes/shapka/layouts/partials/header.html
@@ -1,5 +1,4 @@
-<div class="top-bar">
-    <div class="top-bar-logo">
-        <a class="top-bar-logo__text" href="/">Мама, я в шапці</a>
-    </div>
+{{ $heroImage := resources.Get "images/hero-image.jpg" }}
+<div class="hero" style="background-image: url('{{ $heroImage.Permalink }}');">
+    <a href="/" class="hero__title">Мама, я в шапці! :)</a>
 </div>
