--- a/themes/shapka/layouts/partials/footer.html
+++ b/themes/shapka/layouts/partials/footer.html
@@ -1,1 +1,14 @@
-<div class="copyright">&copy; Dmytro Kovalchuk 2022</div>
+<div class="footer">
+    <div class="top-bar-logo">
+        <a href="/" class="top-bar-logo__link">Мама, я в шапці :)</a>
+    </div>
+    <ul class="footer-links">
+        <li>
+            <a href="https://t.me/mamayavshaptsi" class="icon-link icon-link--telegram footer-links__link">Канал шапки</a>
+        </li>
+    </ul>
+    <div class="copyright">
+        &copy; Шапка 2022
+    </div>
+</div>
+
