--- a/themes/shapka/layouts/partials/header.html
+++ b/themes/shapka/layouts/partials/header.html
@@ -1,4 +1,12 @@
 {{ $heroImage := resources.Get "images/hero-image.jpg" }}
-<div class="hero" style="background-image: url('{{ $heroImage.Permalink }}');">
-    <a href="/" class="hero__title">Мама, я в шапці! :)</a>
+<div class="top-bar">
+    <div class="top-bar-logo">
+        <a href="/" class="top-bar-logo__link">Мама, я в шапці :)</a>
+    </div>
+</div>
+
+<div class="hero">
+    <div class="hero__image" style="background-image: url('{{ $heroImage.Permalink }}')">
+
+    </div>
 </div>
