--- a/themes/shapka/layouts/index.html
+++ b/themes/shapka/layouts/index.html
@@ -2,10 +2,27 @@
     <section class="announces">
     {{ range .Paginator.Pages }}
         <article class="announce">
-            <h1 class="annouce__title">{{ .Title }}</h1>
+            {{ if (isset .Params "thumbnail") }}
+                {{ $thumbnail := .Params.thumbnail }}
+                {{ range .Resources.Match $thumbnail }}
+                    <div class="announce__thumbnail" style="background-image: url('{{ .Permalink }}')">
+
+                    </div>
+                {{ else }}
+                    No thumbnail image found
+                {{ end }}
+            {{ else }}
+                {{ $thumbnail := resources.Get "images/default-thumbnail.jpg" }}
+                <div class="announce__thumbnail" style="background-image: url('{{ $thumbnail.Permalink }}')">
+
+                </div>
+            {{ end}}
+
             <time class="announce__publication-date">{{ time.Format "2006-01-02" .Date }}</time>
-            <p class="announce__summary">{{ .Summary }}</p>
-            <a href="{{ .Permalink }}" class="announce__link">Читати</a>
+            <h1 class="announce__title">
+                <a href="{{ .Permalink }}" class="announce__link">{{ .Title }}</a>
+            </h1>
+
         </article>
     {{ end }}
     </section>
