--- a/themes/shapka/layouts/partials/footer.html
+++ b/themes/shapka/layouts/partials/footer.html
@@ -1,7 +1,5 @@
 <div class="footer">
-    <div class="top-bar-logo">
-        <a href="/" class="top-bar-logo__link">Мама, я в шапці :)</a>
-    </div>
+    {{ partial "logo" .}}
     <ul class="footer-links">
         <li>
             <a href="https://t.me/mamayavshaptsi" class="icon-link icon-link--telegram footer-links__link">Канал шапки</a>
