--- a/themes/shapka/layouts/index.html
+++ b/themes/shapka/layouts/index.html
@@ -1,29 +1,7 @@
 {{ define "main" }}
     <section class="announces">
     {{ range .Paginator.Pages }}
-        <article class="announce">
-            {{ if (isset .Params "thumbnail") }}
-                {{ $thumbnail := .Params.thumbnail }}
-                {{ range .Resources.Match $thumbnail }}
-                    <div class="bg-image announce__thumbnail" style="background-image: url('{{ .Permalink }}')">
-
-                    </div>
-                {{ else }}
-                    No thumbnail image found
-                {{ end }}
-            {{ else }}
-                {{ $thumbnail := resources.Get "images/default-thumbnail.jpg" }}
-                <div class="bg-image announce__thumbnail" style="background-image: url('{{ $thumbnail.Permalink }}')">
-
-                </div>
-            {{ end}}
-
-            <time class="announce__publication-date">{{ time.Format "2006-01-02" .Date }}</time>
-            <h1 class="announce__title">
-                <a href="{{ .Permalink }}" class="announce__link">{{ .Title }}</a>
-            </h1>
-
-        </article>
+        {{ partial "announce" . }}
     {{ end }}
     </section>
 {{ end }}
