feat(theme): hide top bar on large screens

--- a/themes/shapka/assets/scss/main.scss
+++ b/themes/shapka/assets/scss/main.scss
@@ -20,6 +20,10 @@ body {
 // components
 .top-bar {
     background-color: $color-dark;
+
+    @include lg {
+        background: none;
+    }
 }
 
 .logo {
